--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MSSQL_LOCAL": "Server=127.0.0.1,1402;Database=budget;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Dbconnect": "Server=127.0.0.1,1402;Database=budget;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
